syntax = "proto3";

package autopilotrpc_pb;

option go_package = "github.com/pkt-cash/pktd/generated/proto/autopilotrpc_pb";

message StatusResponse {
    // Indicates whether the autopilot is active or not.
    bool active = 1;
}

message QueryScoresRequest {
    repeated string pubkeys = 1;

    // If set, we will ignore the local channel state when calculating scores.
    bool ignore_local_state = 2;
}

message QueryScoresResponse {
    message HeuristicResult {
        string heuristic = 1;
        map<string, double> scores = 2;
    }

    repeated HeuristicResult results = 1;
}

message SetScoresRequest {
    // The name of the heuristic to provide scores to.
    string heuristic = 1;

    /*
    A map from hex-encoded public keys to scores. Scores must be in the range
    [0.0, 1.0].
    */
    map<string, double> scores = 2;
}